cabal-version:             2.2
version:                   0.3.0
license:                   MIT
author:                    Sam A. Horvath-Hunt
maintainer:                hello@samhh.com
name:                      tshm
build-type:                Simple

common common
  default-language:        Haskell2010
  default-extensions:
    ConstraintKinds
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns
  ghc-options:
    -Wall
  build-depends:
      base                 ^>=4.14
    , relude               ^>=0.7
    , text                 ^>=1.2
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

executable tshm
  import:                  common
  hs-source-dirs:          src/
  main-is:                 Main.hs
  build-depends:
      tshm
    , optparse-applicative  ==0.16.1.0
  other-modules:
    Paths_tshm
    CLI

library
  import:                  common
  hs-source-dirs:          lib/
  exposed-modules:
    TSHM.Compiler
    TSHM.Reconciler
    TSHM.Parser
    TSHM.TypeScript
    Utils
  build-depends:
      containers           ^>=0.6
    , megaparsec           ^>=9.0
    , parser-combinators   ^>=1.2
    , mtl                  ^>=2.2
    , tuple                ^>=0.3.0

test-suite test-tshm
  import:                  common
  hs-source-dirs:          test/
  main-is:                 Spec.hs
  type:                    exitcode-stdio-1.0
  build-depends:
      tshm
    , hedgehog             ^>=1.0
    , hspec                ^>=2.7
    , hspec-hedgehog       ^>=0.0.1
    , hspec-megaparsec     ^>=2.2
    , megaparsec           ^>=9.0
  build-tool-depends:
      hspec-discover:hspec-discover
  other-modules:
    TSHM.CompilerSpec
    TSHM.ParserSpec
    TSHM.ReconcilerSpec
    UtilsSpec

